# 6sem2025ETL

./: .env  .env-example  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  backup.bacpac  docker-compose-etl.yml  docker-compose.yml  docker_mongo.sh  etl.Dockerfile  etl_critical_projects.Dockerfile  etl_evolution_chart.Dockerfile  etl_structure  init.sh  main.py  pyproject.toml  requirements.txt  sqlpackage.Dockerfile
config/: settings.py
docker_bd/: Dockerfile  docker-compose.yml  init.sh
nodesk/etl/: databases.py  models.py  settings.py
nodesk/etl/pipelines/: critical_projects.py  evolution_chart.py
nodesketl/: config.py  db_connector.py  etl.py  extractor.py  loader.py  transformer.py
src/: extract.py  load.py  transform.py  utils.py
