[project]
name = "nodesk-etl"
version = "0.0.0"
description = ""
authors = [{ name = "Jhonny Freitas Dutra", email = "dutrajy@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["sqlalchemy (>=2.0.43,<3.0.0)", "pymongo (>=4.15.1,<5.0.0)", "pydantic-settings (>=2.11.0,<3.0.0)", "pyodbc (>=5.2.0,<6.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["ruff (>=0.13.2,<0.14.0)", "mypy (>=1.18.2,<2.0.0)", "pre-commit (>=4.3.0,<5.0.0)"]

[tool.ruff]
line-length = 120
exclude = [".venv"]

[tool.mypy]
python_version = "3.13"
plugins = ['pydantic.mypy', 'sqlalchemy.ext.mypy.plugin']
